# AI-Agent-Learning

./: .gitignore
TRIAL_APP/: .env.example  docker-compose.yml  pyproject.toml
TRIAL_APP/app/: main.py
TRIAL_APP/app/core/: config.py  lifespan.py  weather_codes.py
TRIAL_APP/app/domains/ai/llms/: client.py  enums.py  factory.py
TRIAL_APP/app/domains/ai/providers/: base.py  groq.py
TRIAL_APP/app/domains/ai/runtime_dependencies/: graph_context.py  runtime.py
TRIAL_APP/app/domains/ai/utils/: token_counter_helper.py
TRIAL_APP/app/domains/api/routers/: chat.py  health.py
TRIAL_APP/app/domains/api/services/: chat_service.py
TRIAL_APP/app/domains/dependencies/: app_state.py  providers.py
TRIAL_APP/app/domains/graph/: builder.py  state.py
TRIAL_APP/app/domains/graph/nodes/: preferences.py  validate_tool_calls.py
TRIAL_APP/app/domains/graph/utils/: tool_requirements.py
TRIAL_APP/app/integrations/attraction/: base.py  client.py  exceptions.py  schemas.py  tool.py
TRIAL_APP/app/integrations/attraction/providers/: open_trip_map.py
TRIAL_APP/app/integrations/geocoding/: aliases.py  base.py  client.py  exceptions.py  schemas.py
TRIAL_APP/app/integrations/geocoding/providers/: open_meteo.py
TRIAL_APP/app/integrations/hotel/: base.py  client.py  exceptions.py  schemas.py  tool.py
TRIAL_APP/app/integrations/hotel/providers/: amadeus.py  hotel_beds.py
TRIAL_APP/app/integrations/weather/: client.py  schemas.py  tool.py
TRIAL_APP/app/integrations/weather/providers/: base.py  open_meteo.py
