[project]
name = "trial-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "langchain-core>=1.5.0",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-postgres>=3.1.0",
    "loguru>=0.7.3",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "tiktoken>=0.13.0",
    "uvicorn>=0.51.0",
]
